deploy + fix shifting background

--- a/packages/home/src/styles/app.scss
+++ b/packages/home/src/styles/app.scss
@@ -2,7 +2,7 @@
 
 body {
   background: url('../img/corkboard.jpg');
-  background-position: center;
+  background-position: top center;
   font-family: 'Lato', sans-serif;
   margin: 0;
   padding: 0;
